<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="query_hint">Enter Search Term.</string>
    <string name="title_activity_image_display">ImageDisplay</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title">Advanced Search Options</string>
    <string-array name="image_sizes_array">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
    <string-array name="color_filter_array">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="image_type_array">
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="filter_hint">Enter website url.</string>
    <string name="save">Save</string>

</resources>
