<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/tvImageSize" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImageSize"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/image_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImageSize"
        android:layout_toRightOf="@+id/tvColorFilter" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spColorFilter"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/tvImageSize"
        android:text="@string/color_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <Spinner
        android:id="@+id/spImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spColorFilter"
        android:layout_toRightOf="@+id/tvImageType" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spImageType"
        android:layout_toLeftOf="@+id/spColorFilter"
        android:text="@string/image_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spImageType"
        android:text="@string/site_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spImageType"
        android:layout_marginRight="16dp"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:ems="10"
        android:hint="@string/filter_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSiteFilter"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/tvImageType"
        android:onClick="saveSettings"
        android:text="@string/save" />

</RelativeLayout>
